<?xml version="1.0"?>
<package format="3">
  <name>ros2_subscriber</name>
  <version>0.0.0</version>
  <description>Simple ROS2 subscriber assignment package</description>

  <maintainer email="student@example.com">Student</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
